service/contacts/k8s/ingress-route.yml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: user
  namespace: app-0
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-env0-app0-user
  routes:
    - match: Host(`user.app0.env0.luojm.com`) 
      kind: Rule
      services:
      - name: user
        kind: Service
        namespace: app-0
        port: 80
